Fix css alignment for clients & team members

--- a/src/components/client/Client.module.css
+++ b/src/components/client/Client.module.css
@@ -117,6 +117,7 @@
   font-size: 16px;
   font-weight: bold;
   padding-left: 21px;
+  width: 130px;
 }
 
 .extraInfoSubDesktop {
@@ -126,6 +127,7 @@
   font-size: 14px;
   font-weight: bold;
   padding-left: 21px;
+  width: 130px;
 }
 
 .extraInfoMain {
