--- a/src/components/team-member/TeamMember.module.css
+++ b/src/components/team-member/TeamMember.module.css
@@ -130,6 +130,7 @@
   font-size: 16px;
   font-weight: bold;
   padding-left: 21px;
+  width: 130px;
 }
 
 .extraInfoSubDesktop {
@@ -139,6 +140,7 @@
   font-size: 14px;
   font-weight: bold;
   padding-left: 21px;
+  width: 130px;
 }
 
 .extraInfoMain {
